--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ body {
   max-width: 700px;
   min-width: 0;
   padding: 0 10px 25px;
+  background-color: #191308;
+  color: #D1D2B1;
   font-family: "Libre Baskerville", "Karla", serif, san-serif;
   display: grid;
   row-gap: 5px;
@@ -18,33 +20,42 @@ body {
     "header nav"
     "ct ct"
 }
+
 h2 {
+
   margin-top: 1em;
   padding-top: 1em;
-}
-nav a {
-  margin-left: 20px;
+
 }
 
-body {
-  color: #444;
+nav a {
+
+  margin-left: 20px;
+
 }
+
 h1, h2, strong {
-  color: #222;
+
+  color: #D1D2B1;
+
 }
 
 header {
+
   margin: 0px;
   font-size: 23px;
     grid-area: header;
   justify-self: left;
   align-self: end;
+
 }
+
 article {
   font-size: 16px;
   grid-area: ct;
   border-top: 2px solid gray;
 }
+
 nav {
   grid-area: nav;
   justify-self: right;
@@ -52,22 +63,25 @@ nav {
   font-size: 18px;
   letter-spacing: 1px;
 }
+
 h1 {
   font-size: 26px;
 }
+
 h2 {
   font-size: 23px;
 }
 
 a {
-  color: #ffa64d;
+  color:  #9BCB90;
 }
 
 nav a {
-  text-align: right;
+  text-align: left;
 }
 
 @media screen and (max-width: 430px) {
+
   body {
     grid-template-columns: auto;
     grid-template-rows: minmax(40px, auto) minmax(30px, auto) auto auto;
@@ -76,10 +90,12 @@ nav a {
     "nav"
     "ct"
   }
+
   header, nav {
     text-align: center;
     justify-self: center;
   }
+
   nav a {
     margin: 0 10px;
   }
